<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/headerLayout"
            layout="@layout/app_bar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:orientation="vertical"
            android:paddingLeft="50dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txv_AccountSrc"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txv_accSrc"
                style="@style/txv_resultField"
                android:hint="@string/txv_AccountSrc" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txv_AccountSrcName"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txv_accSrcName"
                style="@style/txv_resultField"
                android:hint="@string/txv_AccountSrcName" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txv_AccountDest"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txv_accDest"
                style="@style/txv_resultField"
                android:hint="@string/txv_AccountDest" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txv_AccountDestName"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txv_accDestName"
                style="@style/txv_resultField"
                android:hint="@string/txv_AccountDestName" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txv_Amount"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txv_amount"
                style="@style/txv_resultField"
                android:hint="@string/txv_Amount" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txv_ReferenceNumber"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txv_RefNum"
                style="@style/txv_resultField"
                android:hint="@string/txv_ReferenceNumber" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txv_TransactionTimestamp"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txv_TimeStamp"
                style="@style/txv_resultField"
                android:hint="@string/txv_TransactionTimestamp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txv_Status"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txv_Status"
                style="@style/txv_resultField"
                android:text="@string/txv_StatusRest" />

        </LinearLayout>


    </LinearLayout>

</FrameLayout>