<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/headerLayout"
            layout="@layout/app_bar"/>

        <include
            android:id="@+id/loadview"
            layout="@layout/loading_page"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="50dp"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/blueDark"
                android:text="@string/txv_AccountSrc"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/edt_AccountSrc"
                android:hint="@string/txv_AccountSrc"
                style="@style/edt_BaseConfirmTransfer"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/blueDark"
                android:text="@string/txv_AccountSrcName"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/edt_AccountSrcName"
                android:hint="@string/txv_AccountSrcName"
                style="@style/edt_BaseConfirmTransfer"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/blueDark"
                android:text="@string/txv_AccountDest"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/edt_AccountDest"
                android:hint="@string/txv_AccountDest"
                style="@style/edt_BaseConfirmTransfer"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/blueDark"
                android:text="@string/txv_AccountDestName"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/edt_AccountDestName"
                android:hint="@string/txv_AccountDestName"
                style="@style/edt_BaseConfirmTransfer"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/blueDark"
                android:text="@string/txv_Amount"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/edt_Amount"
                style="@style/edt_BaseConfirmTransfer"
                android:hint="@string/txv_Amount"
                android:layout_marginBottom="50dp"/>

            <Button
                android:id="@+id/btnConfirm"
                android:text="@string/btn_Confirm"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:background="@drawable/btn_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>


    </LinearLayout>

</FrameLayout>