<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/headerLayout"
        layout="@layout/app_bar"/>

    <include
        android:id="@+id/loadview"
        layout="@layout/loading_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="40dp"
        android:gravity="center"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/blueDark"
            android:text="@string/txv_AccountNum"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/edt_AccountNumber"
            android:enabled="false"
            android:textColor="@color/black"
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_textfield"
            android:text="@string/txv_AccountNum"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/blueDark"
            android:text="@string/txv_Name"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/edt_Name"
            android:enabled="false"
            android:textColor="@color/black"
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_textfield"
            android:text="@string/txv_Name"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/blueDark"
            android:text="@string/txv_Balance"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/edt_Balance"
            android:enabled="false"
            android:textColor="@color/black"
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_textfield"
            android:text="@string/txv_Balance" />

    </LinearLayout>


</LinearLayout>


</FrameLayout>